mts-flarum/templates/flarum-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: flarum
  name: flarum
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 8888
  type: NodePort
  selector:
    app: flarum
