mts-flarum/templates/flarum-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: flarum-ingress
 namespace: default
 annotations:
   kubernetes.io/ingress.class: traefik
spec:
 rules:
 - host: flarum.mobiletechnology.solutions
   http:
     paths:
     - backend:
         serviceName: flarum
         servicePort: 80
